// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render closed menu 1`] = `
.c3 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c3 :hover,
.c3 :active,
.c3 :focus {
  text-decoration: underline;
}

.c5 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat";
}

.c6 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
}

.c1 {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: flex-end;
  margin-right: 1.75rem;
}

.c2 {
  align-items: center;
  background: rgb(0, 98, 114);
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  justify-content: center;
  overflow: hidden;
  position: absolute;
  top: 3.75rem;
  transition: height 0.3s ease-in-out;
  width: 100vw;
  height: 0;
}

.c2 .c4 {
  transition: opacity 0.3s ease-in-out;
}

.c2 .c4 {
  opacity: 0;
}

.c7 {
  display: none;
}

.c8 {
  display: none;
  justify-content: flex-start;
}

.c9 {
  display: none;
  justify-content: flex-end;
}

.c0 {
  background-color: rgb(0, 98, 114);
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 3.75rem;
  position: fixed;
  user-select: none;
  width: 100%;
  z-index: 50;
}

@media (min-width: 1200px) {
  .c1 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c7 {
    display: flex;
    flex-direction: row;
    margin: auto;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    width: 75rem;
  }
}

@media (min-width: 1200px) {
  .c8 {
    align-items: center;
    display: flex;
    gap: 2.5rem;
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c9 {
    align-items: center;
    display: flex;
    gap: 2.5rem;
    width: 50%;
  }
}

<header
  class="c0"
>
  <div
    class="c1"
  >
    <div
      aria-expanded="false"
      aria-label="Avaa valikko"
      class="hamburger-react"
      role="button"
      style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
      tabindex="0"
    >
      <div
        style="transition: 0.15s ease-in-out 0.15s; transform: none;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0s; transform: none;"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out; opacity: 1;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out 0.15s; transform: none;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0s; transform: none;"
        />
      </div>
    </div>
  </div>
  <div
    class="c2"
  >
    <a
      class="c3 c4 c5"
      href="/"
      title="Lauri Lavanti"
    >
      Lauri Lavanti
    </a>
    <a
      class="c3 c4 c6"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c3 c4 c6"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c3 c4 c6"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </div>
  <div
    class="c7"
  >
    <div
      class="c8"
    >
      <a
        class="c3 c4 c5"
        href="/"
        title="Lauri Lavanti"
      >
        Lauri Lavanti
      </a>
    </div>
    <div
      class="c9"
    >
      <a
        class="c3 c4 c6"
        href="/minusta/"
      >
        Minusta
      </a>
      <a
        class="c3 c4 c6"
        href="/blogi/"
      >
        Blogi
      </a>
      <a
        class="c3 c4 c6"
        href="/ota-yhteytta/"
      >
        Ota yhteyttä
      </a>
    </div>
  </div>
</header>
`;

exports[`<Header /> should render open 1`] = `
.c3 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c3 :hover,
.c3 :active,
.c3 :focus {
  text-decoration: underline;
}

.c5 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat";
}

.c6 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
}

.c1 {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: flex-end;
  margin-right: 1.75rem;
}

.c10 .c4 {
  transition: opacity 0.3s ease-in-out;
}

.c10 .c4 {
  opacity: 0;
}

.c2 {
  align-items: center;
  background: rgb(0, 98, 114);
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  justify-content: center;
  overflow: hidden;
  position: absolute;
  top: 3.75rem;
  transition: height 0.3s ease-in-out;
  width: 100vw;
  height: calc(100vh - 3.75rem);
}

.c2 .c4 {
  transition: opacity 0.3s ease-in-out;
}

.c2 .c4 {
  opacity: 100;
}

.c7 {
  display: none;
}

.c8 {
  display: none;
  justify-content: flex-start;
}

.c9 {
  display: none;
  justify-content: flex-end;
}

.c0 {
  background-color: rgb(0, 98, 114);
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  height: 3.75rem;
  position: fixed;
  user-select: none;
  width: 100%;
  z-index: 50;
}

@media (min-width: 1200px) {
  .c1 {
    display: none;
  }
}

@media (min-width: 1200px) {

}

@media (min-width: 1200px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c7 {
    display: flex;
    flex-direction: row;
    margin: auto;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    width: 75rem;
  }
}

@media (min-width: 1200px) {
  .c8 {
    align-items: center;
    display: flex;
    gap: 2.5rem;
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c9 {
    align-items: center;
    display: flex;
    gap: 2.5rem;
    width: 50%;
  }
}

<header
  class="c0"
>
  <div
    class="c1"
  >
    <div
      aria-expanded="true"
      aria-label="Sulje valikko"
      class="hamburger-react"
      role="button"
      style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
      tabindex="0"
    >
      <div
        style="transition: 0.15s ease-in-out 0s; transform: translateY(11px);"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0.15s; transform: rotate(45deg);"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out; opacity: 0;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out 0s; transform: translateY(-11px);"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0.15s; transform: rotate(-45deg);"
        />
      </div>
    </div>
  </div>
  <div
    class="c2"
  >
    <a
      class="c3 c4 c5"
      href="/"
      title="Lauri Lavanti"
    >
      Lauri Lavanti
    </a>
    <a
      class="c3 c4 c6"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c3 c4 c6"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c3 c4 c6"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </div>
  <div
    class="c7"
  >
    <div
      class="c8"
    >
      <a
        class="c3 c4 c5"
        href="/"
        title="Lauri Lavanti"
      >
        Lauri Lavanti
      </a>
    </div>
    <div
      class="c9"
    >
      <a
        class="c3 c4 c6"
        href="/minusta/"
      >
        Minusta
      </a>
      <a
        class="c3 c4 c6"
        href="/blogi/"
      >
        Blogi
      </a>
      <a
        class="c3 c4 c6"
        href="/ota-yhteytta/"
      >
        Ota yhteyttä
      </a>
    </div>
  </div>
</header>
`;
